adding funding an issue

--- a/test/end-to-end/tests/config_example.ini
+++ b/test/end-to-end/tests/config_example.ini
@@ -22,6 +22,12 @@ gh_repo_name = repo_name
 ;MetaMask password for organization
 mm_password = password
 
+;Ethereum
+[Ethereum]
+eth_account = 0x6f00ce7253bfd3a5a1c307b5e13814bf3433c72f
+eth_private_key =
+eth_provider =
+
 [DEV]
 ;GitHub credentials for developer
 gh_login = login
